12 Sep 2011: Wouter
	- fix fd leaked every second by panel if the daemon was down.
	- more robust outq_delete function in code notation.
	- do not print ID values if mismatch (enabled on verbosity 4).
	- print time of probe with results.
	- fix double-close of FD in acceptfailure case.
	- close log file when daemon exits.

9 Sep 2011: Wouter
	- can override nameserver settings on windows (needs administrator
	  permissions) and clears them away (back to the default) on exit.
	- fix not enough detection of network changes on OSX.
	- get a probe after start on OSX.
	- fix submit of disconnect state, submit "".
	- fix resolvconf writes on OSX: more chance of winning resolv.conf
	  which is a small race what with setting scutil at the same time,
	  and sets it after userlogin because OSX reprobes at user login.

8 Sep 2011: Wouter
	- Fix that windows DHCP hook fires less often: only if list of network
	  and GUID of adapter and IPs changes.
	- unbound-control execute hook.
	- reshook for windows.

7 Sep 2011: Wouter
	- dnssec-triggerd can run as a windows service.
	- windows DHCP hook on network changes.
	- support nm-tool NetworkManager (older version).

6 Sep 2011: Wouter
	- dnssec-trigger-keygen that works without shellscripts.  Can also
	  generate for unbound.
	- keygen for windows compiled (it works on other ports, but they have
	  shell scripts).

2 Sep 2011: Wouter
	- GUI tray icon works on windows.
	- minimal theme on windows.

1 Sep 2011: Wouter
	- install backups and uninstall restores resolv.conf.
	- watch on OSX the network.plist and airport.plist files and not
	  the entire directory, which changes too often.
	- README and BSD LICENSE.
	- renamed plist nl.nlnetlabs.x

31 Aug 2011: Wouter
	- cocoa and gtk build and install and uninstall make targets
	- GTK autostart .desktop entry.
	- man page.

30 Aug 2011: Wouter
	- osx xcode status item.
	- you can test the Cocoa GUI with: cd osx/RiggerStatusItem/