@@ -13,6 +13,9 @@ tempfile=/tmp/dnssec-trigger-osx.tmp
 ifs=`ifconfig | awk '/^[^ 	:]*:/ { sub(/:.*$/,empty); iface=$0 } /status: active/ { print iface }'`
 ifs=`echo $ifs`
 
+# the ssid(s) of the wifi
+ssid=`/System/Library/PrivateFrameworks/Apple80211.framework/Versions/A/Resources/airport -I 2>&1 | grep "SSID"`
+
 # and the DNS servers for that
 ips=""
 for i in $ifs; do
@@ -60,14 +63,14 @@ ips=`echo $ips`
 
 # see if it has changed
 if test -f $tempfile; then
-	if echo "$ifs $ips" | diff $tempfile - >dev/null; then
+	if echo "$ifs $ips $ssid" | diff $tempfile - >dev/null; then
 		# it is equal
 		logger "dnssec-trigger(osx) no-change $ifs DNS $ips"
 		exit 0
 	fi
 fi
 # store on file
-echo "$ifs $ips" > $tempfile
+echo "$ifs $ips $ssid" > $tempfile
 
 logger "dnssec-trigger(osx) detected $ifs DNS $ips"
 0sbindir0/dnssec-trigger-control submit "$ips"
