@@ -1,3 +1,7 @@
+13 Sep 2011: Wouter
+	- pick up SSID (for windows, OSX) to filter trigger with, so an SSID
+	  change from the wlan triggers a reprobe.
+
 12 Sep 2011: Wouter
 	- fix fd leaked every second by panel if the daemon was down.
 	- more robust outq_delete function in code notation.
